force-app/main/default/objects/Service_Parts_Accounts__c/Service_Parts_Accounts__c.object-meta.xml
<CustomObject>
    <label>Service Parts Accounts</label>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Parts Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>