force-app/main/default/objects/Service_Parts_Accounts__c/fields/Daily_Order_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Order_Limit__c</fullName>
    <label>Daily Order Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>