force-app/main/default/objects/Service_Parts_Accounts__c/fields/Parts_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Parts_Account_Name__c</fullName>
    <label>Parts Account Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASSP</fullName>
            </value>
            <value>
                <fullName>ATM Legacy Equipment</fullName>
            </value>
            <value>
                <fullName>EasyPoint</fullName>
            </value>
            <value>
                <fullName>Independent Service Organization</fullName>
            </value>
            <value>
                <fullName>Integrator</fullName>
            </value>
            <value>
                <fullName>International Distributor</fullName>
            </value>
            <value>
                <fullName>Original Equipment Manufacturer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refurbisher</fullName>
            </value>
            <value>
                <fullName>Reseller/Servicing Partner</fullName>
            </value>
            <value>
                <fullName>Self Maintainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>