force-app/main/default/objects/Service_Parts_Accounts__c/fields/Parts_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Parts_Account_Status__c</fullName>
    <label>Parts Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Credit Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>