force-app/main/default/objects/Service_Parts_Accounts__c/fields/PRM_Services_Acct__c.field-meta.xml
<CustomField>
    <fullName>PRM_Services_Acct__c</fullName>
    <label>PRM Services Acct #</label>
    <referenceTo>PRM_Services__c</referenceTo>
    <relationshipLabel>Service Parts Accounts</relationshipLabel>
    <relationshipName>Service_Parts_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>